clusters/hive/apps/homeassistant/k8s-manifests/homeassistant-netpol-allow-from-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: homeassistant-allow-from-external
  namespace: homeassistant
spec:
  podSelector:
    matchLabels:
      app: homeassistant
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/8  # or whatever your cluster nodes use
